# DES_Head-Unit

./: .gitignore  CHANGES_APPLIED.md  CLAUDE.md  COMMONAPI_PLAN.md  COMPREHENSIVE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  FILE_NAMING_CONVENTION.md  MULTI_PROCESS_TESTING.md  PROJECT_STATUS.md  README.md  README_CLEAN.md  run_ambientapp.sh  run_mediaapp.sh  test_headunit.sh
.github/workflows/: ci-cd.yml
HelloWorld/: CMakeLists.txt
app/: ECU2_RUN_GUIDE.sh  FINAL_REVIEW_CHECKLIST.md  TROUBLESHOOTING_COMPOSITOR.md  WAYLAND_COMPOSITOR_REBUILD.md  build_all_ecu2.sh  diagnose_compositor_platform.sh  rebuild_and_run.sh  rebuild_and_test_wayland.sh  setup_wayland_ecu2.sh  verify_all_apps.sh
app/AmbientApp/: CMakeLists.txt  build.sh  commonapi.ini  qml.qrc  run_wayland.sh  vsomeip.json  vsomeip_ambient.json
app/AmbientApp/config/: commonapi_ecu2.ini
app/AmbientApp/qml/: AmbientLighting.qml
app/AmbientApp/src/: ambientmanager.cpp  ambientmanager.h  main.cpp
app/Design/DesignContent/: Screen01Form.ui.qml
app/GearApp/: CMakeLists.txt  build.sh  qml.qrc  run.sh  run_wayland.sh
app/GearApp/config/: commonapi_ecu2.ini  vsomeip_ecu2.json
app/GearApp/qml/: GearSelectionWidget.qml
app/GearApp/src/: VehicleControlClient.cpp  gearmanager.cpp  gearmanager.h  ipcmanager.cpp  ipcmanager.h  main.cpp
app/HU_MainApp/: CMakeLists.txt  CMakeLists_compositor.txt  README_old.md  build.sh  build_compositor.sh  cleanup_files.sh  qml_compositor.qrc  run.sh  run_compositor.sh  start_all_wayland.sh
app/HU_MainApp/qml/: CompositorMain.qml  HomePage.qml  MediaPage.qml
app/HU_MainApp/qml/widgets/: GearSelectionWidget.qml
app/HU_MainApp/src/: main.cpp  main_compositor.cpp  main_compsitor.cpp
app/HU_app/: AmbientLighting.qml  CMakeLists.txt  CMakeLists_simple.txt  GearSelection.qml  GearSelectionWidget.qml  MainMenu.qml  MediaApp.qml  MediaApp_original.qml  MediaApp_usb.qml  UsbMedia.cpp  VSOMEIP_MIGRATION_GUIDE.md  ipcmanager.cpp  ipcmanager.h  main.cpp  main.qml  mediamanager.cpp  mediamanager.h  qml.qrc  simple_mock_test.cpp  test_mock.qml  test_mock_communication.sh
app/HU_app/services/: MockVehicleService.cpp  MockVehicleService.h
app/IC_app/: CMakeLists.txt  build.sh  dbusreceiver.cpp  dbusreceiver.h  main.cpp  run.sh  vehiclecontrolclient.cpp  vehiclecontrolclient.h  vsomeip_ic.json
app/IC_app/DesignContent/: Screen01Form.ui.qml
app/MediaApp/: CMakeLists.txt  qml.qrc  run_wayland.sh  vsomeip.json
app/MediaApp/qml/: MediaApp.qml
app/MediaApp/src/: MediaControlStubImpl.cpp  MediaControlStubImpl.h  main.cpp  main_vsomeip.cpp  mediamanager.cpp  mediamanager.h
app/VehicleControlECU/: BUILD_GUIDE.md  CMakeLists.txt  CMakeLists_mock.txt  CMakeLists_standalone.txt  DEPLOY.md  build.sh  build_standalone.sh  build_vsomeip_rpi.sh  run.sh  run_standalone.sh  vehiclecontrol-ecu.service  vehiclecontrol-ecu_1.0.bb
app/VehicleControlECU/build_mock/: CMakeCache.txt  CMakeLists.txt  Makefile  VehicleControlECU_Mock  cmake_install.cmake
app/VehicleControlECU/build_mock/VehicleControlECU_Mock_autogen/include/: main_mock.moc  main_mock.moc.d
app/VehicleControlECU/config/: commonapi4someip.ini
app/VehicleControlECU/src/: PiRacerController.cpp  PiRacerController.h  VehicleControlStubImpl.cpp  main.cpp  main_mock.cpp  main_standalone.cpp
app/config/: start_all_ecu2.sh  start_all_ecu2_simple.sh  start_ecu1.sh
app/src/arduino/: arduino_velocity.ino
app/src/sender/: SOC.py  gamepads.py  vehicle_controller.py
app_compositor/AmbientApp/qml/: AmbientLighting.qml
app_compositor/AmbientApp/src/: ambientmanager.cpp
app_compositor/HU_MainApp/qml/: AmbientPage.qml
app_compositor/MediaApp/: CMakeLists.txt
app_compositor/MediaApp/qml/: MediaApp.qml
commonapi/fidl/: MediaControl.fdepl  MediaControl.fidl
commonapi/simple/: CMakeLists.txt  HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp  commonapi4someip.ini  vsomeip.json
docs/: CAN_BATTERY_SPEED_DEBUG.md  CAN_TROUBLESHOOTING_20251112.md  COMMUNICATION_DEBUG_SOLUTION.md  DEPLOYMENT_REFACTORING_PLAN.md  ECU_COMMUNICATION_TEST_GUIDE.md  GAMEPAD_DEBUG_GUIDE.md  QT_CREATOR_QUICK_START.md  QT_CREATOR_SETUP.md  QUICK_FIX_AFTER_REBOOT.md  RESTRUCTURE_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  UI_LAYOUT_FIXES.md  VSOMEIP_COMMUNICATION_ANALYSIS.md  YOCTO_CAN_GAMEPAD_FIX.md  vsomeip외부통신.md  전체통신테스트.md
install_folder/lib/: libCommonAPI.so.3.2.4  libvsomeip3-e2e.so.3.5.8
install_folder/lib/cmake/CommonAPI-SomeIP-3.2.4/: CommonAPI-SomeIPTargets-relwithdebinfo.cmake
install_folder/lib/cmake/vsomeip3/: vsomeip3Targets-relwithdebinfo.cmake
install_folder/lib/pkgconfig/: CommonAPI-SomeIP.pc  CommonAPI.pc  vsomeip3.pc
meta/: README.md
meta/meta-headunit/: README-CONFIGURATION.md
meta/meta-headunit/classes/: headunit-image.bbclass
meta/meta-headunit/conf/: layer.conf
meta/meta-headunit/recipes-bsp/bootfiles/: rpi-config_git.bbappend
meta/meta-headunit/recipes-comm/vsomeip/: vsomeip_3.5.8.bb
meta/meta-headunit/recipes-comm/vsomeip-config/: vsomeip-config_1.0.bb
meta/meta-headunit/recipes-core/images/: headunit-image.bb
meta/meta-headunit/recipes-headunit/headunit-app/: headunit-app.bb
meta/meta-headunit/recipes-images/images/: headunit-image.bb
meta/meta-headunit/recipes-module/ambientapp/: ambientapp_1.0.bb
meta/meta-headunit/recipes-module/gearapp/: gearapp_1.0.bb
meta/meta-headunit/recipes-module/hu-mainapp/: hu-mainapp_1.0.bb
meta/meta-headunit/recipes-module/ic-app/: ic-app_1.0.bb
meta/meta-headunit/recipes-module/mediaapp/: mediaapp_1.0.bb
meta/meta-vehiclecontrol/: BUILD_CHECKLIST.md  BUILD_READY.md  CHANGELOG.md  CHANGELOG.md.old  QUICKSTART.md  README.md  문제해결.md  빌드가이드.md
meta/meta-vehiclecontrol/recipes-bsp/bootfiles/: rpi-config_git.bbappend
meta/meta-vehiclecontrol/recipes-connectivity/commonapi/: commonapi-core_3.2.4.bb  commonapi-someip_3.2.4.bb
meta/meta-vehiclecontrol/recipes-connectivity/vsomeip/: vsomeip_3.5.8.bb
meta/meta-vehiclecontrol/tools/: build-all.sh  prepare-sources.sh  setup-build-env.sh  start-build.sh  verify-layer.sh
(+36 files in other folders)
